fix to share, updating fonts, spacing for social share

--- a/less/feature/feature.less
+++ b/less/feature/feature.less
@@ -82,7 +82,7 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     color: @lightgray;
-    // margin-bottom: 50px;
+    margin-bottom: 8.5px;
     }
     &.teaser-intro {
     font-style: italic;
