--- a/less/single-post.less
+++ b/less/single-post.less
@@ -3,7 +3,8 @@
 .single-post, .single-feature {
 
     .columns-feature-content{
-        img{            
+        img{
+            max-width: 750px;
             
 
 
