--- a/less/typography.less
+++ b/less/typography.less
@@ -28,9 +28,21 @@ h1 {
     }
 
     @media (max-width: @screen-xs-min) { 
-     font-size: 21px;
+     font-size: 22px;
      margin: 24px 0;
     }
+}
+
+h2 {
+
+     @media (max-width: @screen-sm-min) { 
+     font-size: 24px;     
+    }
+
+    @media (max-width: @screen-xs-min) { 
+     font-size: 18px;     
+    }
+
 }
 
 .archive-header h1{
